@@ -1,112 +1,77 @@
-<!doctype html public "-//w3c//dtd html 4.0 transitional//en">
+<!DOCTYPE html PUBLIC "-//w3c//dtd html 4.0 transitional//en">
 <html>
 <head>
-   <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
-   <meta name="GENERATOR" content="Mozilla/4.77 [en] (X11; U; Linux 2.4.3-20mdk i686) [Netscape]">
-   <title>Plans for future developments</title>
+  <meta http-equiv="Content-Type"
+ content="text/html; charset=iso-8859-1">
+  <meta name="GENERATOR"
+ content="Mozilla/4.77 [en] (X11; U; Linux 2.4.3-20mdk i686) [Netscape]">
+  <title>Plans for future developments</title>
 </head>
-<body text="#000000" bgcolor="#FFFFFF" link="#0000FF" vlink="#990066" alink="#FF0000">
-<img SRC="images/OpenSceneGraphBanner_Distribution.jpg">
+<body text="#000000" bgcolor="#ffffff" link="#0000ff" vlink="#990066"
+ alink="#ff0000">
+<img src="images/OpenSceneGraphBanner_Distribution.jpg">
 <table>
-<tr>
-<td><a href="index.html">Index</a></td>
-
-<td><a href="introduction.html">Introduction</a></td>
-
-<td><a href="contents.html">Contents</a></td>
-
-<td><a href="install.html">Install</a></td>
-
-<td><a href="dependencies.html">Dependencies</a></td>
-
-<td><a href="examples.html">examples</a></td>
-
-<td><a href="data.html">Data</a></td>
-
-<td><a href="osgviewer.html">Viewer</a></td>
-
-<td><a href="stereo.html">Stereo</a></td>
-<td><a href="osgdem.html">osgdem</a></td>
-
-<td><a href="plan.html">Plan</a></td>
-
-<td><a href="documentation.html">Reference Guides</a></td>
-</tr>
+  <tbody>
+    <tr>
+      <td><a href="index.html">Index</a></td>
+      <td><a href="introduction.html">Introduction</a></td>
+      <td><a href="contents.html">Contents</a></td>
+      <td><a href="install.html">Install</a></td>
+      <td><a href="dependencies.html">Dependencies</a></td>
+      <td><a href="examples.html">examples</a></td>
+      <td><a href="data.html">Data</a></td>
+      <td><a href="osgviewer.html">Viewer</a></td>
+      <td><a href="stereo.html">Stereo</a></td>
+      <td><a href="osgdem.html">osgdem</a></td>
+      <td><a href="plan.html">Plan</a></td>
+      <td><a href="documentation.html">Reference Guides</a></td>
+    </tr>
+  </tbody>
 </table>
-
 <h2>
 <u>Plans for future developments</u></h2>
 Now we have reached the beta phase (0.9.x) of OpenScenegGraph project,
-and are now working towards the full 1.0 release, with a likely 
-release date in second half of 2003.
-
-<h3>
-Future work include:</h3>
-
+and are now working towards the full 1.0 release, with a likely release
+date in second half of 2004.
+<h3>Future work include:</h3>
 <ul>
-
-<li>
-StateSet composite structure for managing multi-pass effects and alternate rendering implemations.  
-This will allow one to manage the use of extensions and provide effecient fallback rendering paths.</li>
-
-<li>
-Clean up the API for managing multi-stage and multi-pass rendering within
+  <li>
+StateSet composite structure for managing multi-pass effects and
+alternate rendering implemations. This will allow one to manage the use
+of extensions and provide effecient fallback rendering paths.</li>
+  <li>
+Clean up the API for managing multi-stage and multi-pass rendering
+within
 the scene graph.</li>
-
-<li>
+  <li>
 Support for clustering in Open Producer and osgProducer.</li>
-
-<li>
-Enhance osgDB and plugins to allow them to be used with alternate input streams.  Add support for native binary 
-file format for rapid loading and saving of scene graphs.
-</li>
-
-<li>
-Development of virtual texture support for rendering in real-time massive images, such as whole earth textures.</li>
-
-<li>
-Introduce a new library osgEnvironment, which adds support for creating
-shapes and environmental effects such as stars, planets, cloud layers, oceans and
+  <li>
+Enhance osgDB and plugins to allow them to be used with alternate input
+streams. Add support for native binary file format for rapid loading
+and saving of scene graphs.</li>
+  <li>Introduce a new library osgEnvironment, which adds support for
+creating
+shapes and environmental effects such as stars, planets, cloud layers,
+oceans and
 ground planes.</li>
-
-<li>
-Integrate unit tests for all classes, using the osgUtx Unit Test Framework.</li>
+  <li>
+Integrate unit tests for all classes, using the osgUtx Unit Test
+Framework.</li>
 </ul>
-
 <h3>
 Books, tutorials and demonstrations</h3>
-
 <ul>
-<li>
+  <li>
 Don Burns and Robert Osfield to write the OpenSceneGraph book!</li>
-
-<li>
-Development of tutorials to published as part of the distribution and on
+  <li>
+Development of tutorials to published as part of the distribution and
+on
 the bazaar</li>
-
-<li>
-Development of technology demonstrations for shows, presentations and training.</li>
-
+  <li>
+Development of technology demonstrations for shows, presentations and
+training.</li>
 </ul>
-
-<h3>
-Professional services</h3>
-
-<ul>
-<li>
-Set up a support contract and support systems for confidential, email,
-phone and onsite support.</li>
-
-<li>
-Set up the Open Scene Graph Professional License (OSGPL) which is conventional
-proprietary license that allows companies to distribute projects that do
-not comply with the terms of the LGPL, such as turn key systems.</li>
-
-<li>
-Develop training courses.</li>
-</ul>
-For further details on osgMP, osgSim, OSGPL licensing, professional support,
-training and consultancy services contact Robert Osfield at <a href="mailto:robert@openscenegraph.com">robert@openscenegraph.com</a>
-or Don Burns at <a href="mailto:don@andesengineering.com">don@andesengineering.com.</a>
+<br>
+<a href="mailto:don@andesengineering.com"></a>
 </body>
 </html>
